2010-01-30  vadim  <vadim@vk.crocodile.org>

	* ProjectPanel_file_ops.cpp (ProjectPanel::fileNew): fixes #1178
	window title stays "[Untitled]" after File/new

2010-01-30  yalovoy <yalovoy@gmail.com>

	* fixes #1159 GUI crash on redo() :
	FWCmdChange.cpp
	FWCmdChange.h

	* fixes #1121 changing "rules font" in global preferences has no effect
	PrefsDialog.cpp
	RuleSetModel.cpp
	RuleSetViewDelegate.cpp

2010-01-30  vadim  <vadim@vk.crocodile.org>

	* ../src/res/os/linux24.xml: fixes #1180 "heartbeat failover
	protocol uses virtual ip address". New cluster wizard did not
	allow the user to add ip address to cluster interface configured
	with heartbeat failover protocol.

	* ../src/gui/instDialog_ui_ops.cpp (instDialog::setFlags): fixes #1176
	GUI crash while compiling cluster object with no StateSyncGroup.

	* PolicyCompiler_ipt.cpp (PolicyCompiler_ipt::insertFailoverRule):
	fixes #1174 "OUTPUT rule is not generated for
	heartbeat". Automatically generated rules for cluster members using
	heartbeat should be placed in both INPUT and OUTPUT chains.

	* ../src/gui/FirewallDialog.cpp (FirewallDialog::applyChanges):
	fixes #1171: the warning dialog asking if ip address objects
	should be renamed automatically appears twice. when user renames
	cluster, firewall, host or interface object, the GUI asks if they
	want to rename ip address objects as well to make them adhere to
	some naming convention. The warning dialog appeared twice on Mac
	and Windows with Qt 4.6

2010-01-29  vadim  <vadim@vk.crocodile.org>

	* ../src/res/configlets/linux24/installer_commands_reg_user: try
	to cancel reboot only if one is pending. This avoids a warning
	saying "cant find pid of running shutdown" every time user
	installs updated iptables script on Linux firewall. Fixes #1169
	Fwbuilder can schedule reboot in a few minutes if user installs
	updated policy in "test mode" and requests reboot as a brute-force
	rollback to safeguard against locking themselves out of the